# gr_fastapi_back_app

./: .coverage  .coveragerc  .env  ACTUALIZACION_AUDITORIA_23NOV2025.md  README.md  TESTING_FINAL_REPORT.md  TESTING_SUMMARY.md  coverage.xml  iniciar.txt  main.py  main_mongodb.py  pyproject.toml  pytest.ini  show_db_structure.py  test_crear_usuario.py
app/: __init__.py
app/core/: __init__.py  config.py  database.py  exceptions.py  models.py  mongodb_connection.py  schemas.py  security.py
app/modules/: __init__.py
app/modules/auth/: __init__.py  dependencies.py  routers.py  schemas.py  services.py
app/modules/claims/: __init__.py  models.py  models_complementarios_mongodb.py  models_mongodb.py  routers.py  routers_mongodb.py  schemas.py  schemas_mongodb.py  services.py  services_mongodb.py
app/modules/clients/: __init__.py  models.py  models_mongodb.py  routers.py  routers_mongodb.py  schemas.py  services.py
app/modules/notes/: __init__.py  models.py  routers.py  schemas.py  services.py
app/services/: __init__.py  audit_service.py
migrations/: README.md  add_clientes_proyectos.sql  add_performance_indexes.sql  rename_sub_estado_to_sub_estado_id.sql  verificar_columnas_reclamos.sql
tests/: README.md  conftest.py  test_auth.py  test_auth_service.py  test_claims_service.py  test_config.py  test_dependencies.py  test_dependencies_extended.py  test_exceptions.py  test_main.py  test_routers.py  test_routers_extended.py  test_routers_functional.py  test_routers_mongodb.py  test_schemas.py  test_security.py  test_services_mongodb.py  test_users_service.py
(+14 files in other folders)
